--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tresjs/core": "^4.2.10",
     "pinia": "^2.1.7",
     "sass": "^1.79.3",
+    "three": "^0.168.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
