--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tresjs/cientos": "^4.0.2",
     "@tresjs/core": "^4.2.10",
     "pinia": "^2.1.7",
     "sass": "^1.79.3",
